force-app/main/default/objects/Opportunity/fields/Product_Name_Main__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Main__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is for mobile users to quickly add a product to an opportunity so that it has the most important Product Listed. This Could be used to update the Opportunity Name.</inlineHelpText>
    <label>Product Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>This product must be active and must be part of the default price book.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>