force-app/main/default/objects/Opportunity/fields/Product_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Sales_Price__c</fullName>
    <inlineHelpText>Requested Spa Price if new spa request. The the spa has been approved and making a pipeline opportunity, then this is the price that was approved.</inlineHelpText>
    <label>Product Spa Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>