force-app/main/default/objects/Opportunity/fields/Project_or_Site_Information__c.field-meta.xml
<CustomField>
    <fullName>Project_or_Site_Information__c</fullName>
    <inlineHelpText>Adds Project Name or Site information to Opportunity Name</inlineHelpText>
    <label>Project or Site Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>