force-app/main/default/objects/Opportunity/fields/Quotes_Active__c.field-meta.xml
<CustomField>
    <fullName>Quotes_Active__c</fullName>
    <description>Amount of quotes that are active</description>
    <label>Quotes Active</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Needs Review, Approved, Delayed Info Missing</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>