force-app/main/default/objects/Opportunity/fields/Record_is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Record_is_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record is Locked</label>
    <type>Checkbox</type>
</CustomField>