force-app/main/default/objects/Opportunity/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <label>Requester Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>