force-app/main/default/objects/Opportunity/fields/Reseller_Address__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Address__c</fullName>
    <label>Reseller Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>