force-app/main/default/objects/Opportunity/fields/Reseller_City__c.field-meta.xml
<CustomField>
    <fullName>Reseller_City__c</fullName>
    <label>Reseller City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>