force-app/main/default/objects/Opportunity/fields/Reseller_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_Email__c</fullName>
    <description>Do not need to add, if you put a contact name and the contact has an email address, the name will be added automatically.</description>
    <label>Reseller Contact Email</label>
    <type>Email</type>
</CustomField>