force-app/main/default/objects/Opportunity/fields/Reseller_Contact_Exists__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_Exists__c</fullName>
    <formula>if(ResellerContact__c = null, false, true)</formula>
    <label>Reseller Contact Exists</label>
    <type>Checkbox</type>
</CustomField>