force-app/main/default/objects/Opportunity/fields/Reseller_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_First_Name__c</fullName>
    <formula>ResellerContact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Contact First Name</label>
    <type>Text</type>
</CustomField>