force-app/main/default/objects/Opportunity/fields/Reseller_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact_Name__c</fullName>
    <label>Reseller Contact Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>