force-app/main/default/objects/Opportunity/fields/Reseller_Exists__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Exists__c</fullName>
    <formula>if(and(Partner_Account_Search__c =null, Reseller_Name__c = null),false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Exists</label>
    <type>Checkbox</type>
</CustomField>