force-app/main/default/objects/Opportunity/fields/Reseller_Name__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Name__c</fullName>
    <label>Reseller Company Name (Text)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>