force-app/main/default/objects/Opportunity/fields/Reseller_Names__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Names__c</fullName>
    <label>Partner Names</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>