force-app/main/default/objects/Opportunity/fields/Reseller_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Sales_Rep__c</fullName>
    <formula>Partner_Account_Search__r.Owner.FirstName+ &apos; &apos;+Partner_Account_Search__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Sales Rep</label>
    <type>Text</type>
</CustomField>