force-app/main/default/objects/Opportunity/fields/Reseller_Zip__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Zip__c</fullName>
    <label>Reseller Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>