force-app/main/default/objects/Opportunity/fields/ResellerAcctOwner__c.field-meta.xml
<CustomField>
    <fullName>ResellerAcctOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ResellerAcctOwner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>