force-app/main/default/objects/Opportunity/fields/ResellerContact__c.field-meta.xml
<CustomField>
    <fullName>ResellerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Reseller Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>