force-app/main/default/objects/Opportunity/fields/ResellerCountry__c.field-meta.xml
<CustomField>
    <fullName>ResellerCountry__c</fullName>
    <description>This is for sharing rules. the country of reseller is added on creation if a reseller is added. If an update, it is not added.</description>
    <label>ResellerCountry</label>
    <length>200</length>
    <type>Text</type>
</CustomField>