force-app/main/default/objects/Opportunity/fields/ResellerEmail__c.field-meta.xml
<CustomField>
    <fullName>ResellerEmail__c</fullName>
    <description>When reseller uses portal to create a deal</description>
    <label>ResellerEmail</label>
    <type>Email</type>
</CustomField>