force-app/main/default/objects/Opportunity/fields/Resellers__c.field-meta.xml
<CustomField>
    <fullName>Resellers__c</fullName>
    <description>Field is used for Wave Pipeline to search for Resellers.</description>
    <label>Resellers</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>