force-app/main/default/objects/Opportunity/fields/Resellers_and_Type__c.field-meta.xml
<CustomField>
    <fullName>Resellers_and_Type__c</fullName>
    <description>Updated by flow</description>
    <label>Resellers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>