force-app/main/default/objects/Opportunity/fields/Roll_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Roll_Out_Date__c</fullName>
    <inlineHelpText>Estimated date of when units will be purchased or delivered.</inlineHelpText>
    <label>Roll Out Date</label>
    <type>Date</type>
</CustomField>