force-app/main/default/objects/Opportunity/fields/Sales_Rep_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_User__c</fullName>
    <formula>CONTAINS(&apos;Sales&apos;, $UserRole.Name )  || CONTAINS(&apos;RBM&apos;, $UserRole.Name ) || CONTAINS(&apos;RSM&apos;, $UserRole.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep User</label>
    <type>Checkbox</type>
</CustomField>