force-app/main/default/objects/Opportunity/fields/Send_Email_Reminder_to_Sales__c.field-meta.xml
<CustomField>
    <fullName>Send_Email_Reminder_to_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to send email reminder to follow-up for sales</description>
    <label>Send Email Reminder to Sales</label>
    <type>Checkbox</type>
</CustomField>