force-app/main/default/objects/Opportunity/fields/Send_Follow_Up_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Follow_Up_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Follow Up Email</label>
    <type>Checkbox</type>
</CustomField>