force-app/main/default/objects/Opportunity/fields/Set_as_Follow_Up_Contact__c.field-meta.xml
<CustomField>
    <fullName>Set_as_Follow_Up_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set End User as Follow Up Contact</label>
    <type>Checkbox</type>
</CustomField>