force-app/main/default/objects/Opportunity/fields/Set_as_Follow_Up_Contact_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Set_as_Follow_Up_Contact_Reseller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sets Re-seller Contact for Follow up Emails</description>
    <label>Set Resller as Follow Up Contact</label>
    <type>Checkbox</type>
</CustomField>