force-app/main/default/objects/Opportunity/fields/Spa__c.field-meta.xml
<CustomField>
    <fullName>Spa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spa Master Link</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Spa Related Opportunites</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>