force-app/main/default/objects/Opportunity/fields/Spa_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Spa_Approval_Date__c</fullName>
    <label>Spa Approval Date</label>
    <type>Date</type>
</CustomField>