force-app/main/default/objects/Opportunity/fields/Spa_Claims_Exist__c.field-meta.xml
<CustomField>
    <fullName>Spa_Claims_Exist__c</fullName>
    <formula>SpaClaims__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spa Claims Exist</label>
    <type>Checkbox</type>
</CustomField>