force-app/main/default/objects/Opportunity/fields/Spa_Claims_Last_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Spa_Claims_Last_6_Months__c</fullName>
    <description>Spa claims in last 6 months</description>
    <label>Spa Claims Last 6 Months</label>
    <summarizedField>Spa_Claims__c.Total_Spa_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Spa_Claims__c.Last_6_Months_Workflow__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Spa_Claims__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>