force-app/main/default/objects/Opportunity/fields/Spa_Claims_Total__c.field-meta.xml
<CustomField>
    <fullName>Spa_Claims_Total__c</fullName>
    <description>Total Spa Claims regardless of time period</description>
    <inlineHelpText>Total Spa Claims regardless of time period</inlineHelpText>
    <label>Spa Claims Total</label>
    <summarizedField>Spa_Claims__c.Total_Spa_Amount__c</summarizedField>
    <summaryForeignKey>Spa_Claims__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>