force-app/main/default/objects/Opportunity/fields/Spa_Email_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Spa_Email_Contacts__c</fullName>
    <label>Spa Email Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>