force-app/main/default/objects/Opportunity/fields/Spa_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Spa_Expiration_Date__c</fullName>
    <label>Spa Expiration Date</label>
    <summarizedField>Quote.ExpirationDate</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>