force-app/main/default/objects/Opportunity/fields/SPA_ID__c.field-meta.xml
<CustomField>
    <fullName>SPA_ID__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Spa ID from the new spa portal. autmatically generated based on the year, month, and sequence of opportunity created.</inlineHelpText>
    <label>SPA ID</label>
    <type>AutoNumber</type>
</CustomField>