force-app/main/default/objects/Opportunity/fields/SPA_Products__c.field-meta.xml
<CustomField>
    <fullName>SPA_Products__c</fullName>
    <label>SPA Products</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>