force-app/main/default/objects/Opportunity/fields/Spa_Request_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Spa_Request_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spa Request Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunities (Spa Request Submitter)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>