force-app/main/default/objects/Opportunity/fields/SPA_Resellers__c.field-meta.xml
<CustomField>
    <fullName>SPA_Resellers__c</fullName>
    <label>SPA Resellers</label>
    <summaryFilterItems>
        <field>Opportunity_Partner__c.Partner_Type__c</field>
        <operation>equals</operation>
        <value>Reseller / VAR</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity_Partner__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>