force-app/main/default/objects/Opportunity/fields/Spa_to_Transfer_to__c.field-meta.xml
<CustomField>
    <fullName>Spa_to_Transfer_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Part of workflow to transfer spa products from large deals with many products to other spas. this allows a process to ensure prices are consistent.</description>
    <label>Spa to Transfer to</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Spa to Transfer to)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>