force-app/main/default/objects/Opportunity/fields/Spa_with_BR__c.field-meta.xml
<CustomField>
    <fullName>Spa_with_BR__c</fullName>
    <label>Spa with BR</label>
    <summaryFilterItems>
        <field>Quote.Spa_Request_Type__c</field>
        <operation>equals</operation>
        <value>Bid Register Request</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Quote.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>