force-app/main/default/objects/Opportunity/fields/SpaClaims__c.field-meta.xml
<CustomField>
    <fullName>SpaClaims__c</fullName>
    <label>SpaClaims</label>
    <summaryForeignKey>Spa_Claims__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>