force-app/main/default/objects/Opportunity/fields/SpaCreateFOpp__c.field-meta.xml
<CustomField>
    <fullName>SpaCreateFOpp__c</fullName>
    <description>Id from opportunity to link and clone to a spa</description>
    <label>SpaCreateFOpp</label>
    <length>18</length>
    <type>Text</type>
</CustomField>