force-app/main/default/objects/Opportunity/fields/Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Submission_Type__c</fullName>
    <defaultValue>&apos;Internal&apos;</defaultValue>
    <label>Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Portal Distribution</fullName>
            </value>
            <value>
                <fullName>Portal Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>