force-app/main/default/objects/Opportunity/fields/Suppress_Flows__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Specifically for data loader to stop certain flows to go on import.</inlineHelpText>
    <label>Suppress Flows</label>
    <type>Checkbox</type>
</CustomField>