force-app/main/default/objects/Opportunity/fields/Task_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Task_Reminder__c</fullName>
    <description>Simple picklist to fire Work Flow Rules to create automated task reminders</description>
    <inlineHelpText>Auto-creates a task when changed from one value to another</inlineHelpText>
    <label>Task Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Send Eval Unit</fullName>
            </value>
            <value>
                <fullName>Schedule Meeting</fullName>
            </value>
            <value>
                <fullName>Submit SPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>