force-app/main/default/objects/Opportunity/fields/Team_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Count__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Member Count</label>
    <type>Checkbox</type>
</CustomField>