force-app/main/default/objects/Opportunity/fields/Test_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Test_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For flows to not run when running Test Coverage on Apex Classes</description>
    <label>Test Opportunity</label>
    <type>Checkbox</type>
</CustomField>