force-app/main/default/objects/Opportunity/fields/testAcctNameDeprecate__c.field-meta.xml
<CustomField>
    <fullName>testAcctNameDeprecate__c</fullName>
    <formula>Resellers_and_Type__c == Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testAcctNameDeprecate</label>
    <type>Checkbox</type>
</CustomField>