force-app/main/default/objects/Opportunity/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Used on VF Page as input and need formula to avoid error. Used on Bid Register Request VF Page</description>
    <formula>text(Amount)</formula>
    <label>Total Amount</label>
    <type>Text</type>
</CustomField>