force-app/main/default/objects/Opportunity/fields/Trade_Show_or_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Trade_Show_or_Marketing_Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign or Trade Show</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>