force-app/main/default/objects/Opportunity/fields/Transfer_Sales_Rep_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Sales_Rep_Ownership__c</fullName>
    <description>when deactivating sales reps, this field tags the old rep to allow for quicker transfer to the new rep.</description>
    <label>Transfer Sales Rep Ownership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>