force-app/main/default/objects/Opportunity/fields/VSRegion__c.field-meta.xml
<CustomField>
    <fullName>VSRegion__c</fullName>
    <label>VSRegion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VS_Region</valueSetName>
    </valueSet>
</CustomField>