force-app/main/default/objects/Opportunity/fields/VSSubRegion__c.field-meta.xml
<CustomField>
    <fullName>VSSubRegion__c</fullName>
    <label>VSSubRegion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VS_SubRegion</valueSetName>
    </valueSet>
</CustomField>