force-app/main/default/objects/Opportunity/fields/With_UVS_Products__c.field-meta.xml
<CustomField>
    <fullName>With_UVS_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <label>With UVS Products</label>
    <type>Checkbox</type>
</CustomField>