force-app/main/default/objects/Opportunity/recordTypes/CDW.recordType-meta.xml
<RecordType>
    <fullName>CDW</fullName>
    <active>true</active>
    <businessProcess>VSA Sales Stages</businessProcess>
    <label>CDW</label>
</RecordType>