force-app/main/default/objects/Opportunity/recordTypes/Inactive.recordType-meta.xml
<RecordType>
    <fullName>Inactive</fullName>
    <active>true</active>
    <businessProcess>VSA Sales Stages</businessProcess>
    <label>Inactive</label>
</RecordType>