force-app/main/default/objects/Opportunity/recordTypes/Latin_America.recordType-meta.xml
<RecordType>
    <fullName>Latin_America</fullName>
    <active>true</active>
    <businessProcess>VSA Sales Stages</businessProcess>
    <label>Latin America</label>
</RecordType>