force-app/main/default/objects/Opportunity/recordTypes/New_SPA.recordType-meta.xml
<RecordType>
    <fullName>New_SPA</fullName>
    <active>true</active>
    <businessProcess>Distributor SPA Request</businessProcess>
    <label>New SPA</label>
</RecordType>