force-app/main/default/objects/Opportunity/recordTypes/Spa_Portal_Users.recordType-meta.xml
<RecordType>
    <fullName>Spa_Portal_Users</fullName>
    <active>true</active>
    <businessProcess>Distributor SPA Request</businessProcess>
    <label>Spa Portal Users</label>
</RecordType>