force-app/main/default/objects/Opportunity/recordTypes/Spa_Portal_Users_LA.recordType-meta.xml
<RecordType>
    <fullName>Spa_Portal_Users_LA</fullName>
    <active>true</active>
    <businessProcess>Distributor SPA Request</businessProcess>
    <label>Spa Portal Users LA</label>
</RecordType>