force-app/main/default/objects/Opportunity/recordTypes/Standard_Canada.recordType-meta.xml
<RecordType>
    <fullName>Standard_Canada</fullName>
    <active>true</active>
    <businessProcess>VSA Sales Stages</businessProcess>
    <label>Standard Canada</label>
</RecordType>