force-app/main/default/objects/Opportunity/recordTypes/Standard_Pen_Display.recordType-meta.xml
<RecordType>
    <fullName>Standard_Pen_Display</fullName>
    <active>true</active>
    <businessProcess>VSA Sales Stages</businessProcess>
    <label>Standard Pen Display</label>
</RecordType>