force-app/main/default/objects/Opportunity/recordTypes/UVS.recordType-meta.xml
<RecordType>
    <fullName>UVS</fullName>
    <active>true</active>
    <businessProcess>VSE%2FI Sales Stages</businessProcess>
    <label>UVS</label>
</RecordType>