force-app/main/default/objects/Opportunity/recordTypes/VSA_Standard_Opportunity_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>VSA_Standard_Opportunity_Record_Type</fullName>
    <active>true</active>
    <businessProcess>VSA Sales Stages</businessProcess>
    <description>Standard Type -  Do not Delete! Used in Apex Trigger. Update Trigger before changing this Record type</description>
    <label>VSA Standard Opportunity Record Type</label>
</RecordType>