force-app/main/default/objects/Opportunity/recordTypes/VSE_I_Standard.recordType-meta.xml
<RecordType>
    <fullName>VSE_I_Standard</fullName>
    <active>true</active>
    <businessProcess>VSE%2FI Sales Stages</businessProcess>
    <label>VSE/I Standard</label>
</RecordType>