force-app/main/default/objects/Opportunity/validationRules/Cannot_Delete_Approved_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Delete_Approved_Products</fullName>
    <active>false</active>
    <errorConditionFormula>and( and($User.Alias&lt;&gt;  &apos;admin&apos;, $Profile.Name &lt;&gt;  &quot;System Administrator&quot;, $Profile.Name &lt;&gt;  &quot;SPA Portal Admin&quot;),priorvalue(SPA_Products_Approved__c) &gt; SPA_Products_Approved__c)</errorConditionFormula>
    <errorMessage>Cannot remove products once they have been approved. Please send request to SPA admin.</errorMessage>
</ValidationRule>