force-app/main/default/objects/Opportunity/validationRules/Cannot_Delete_Approved_Resellers.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Delete_Approved_Resellers</fullName>
    <active>false</active>
    <errorConditionFormula>and( and($Profile.Name &lt;&gt;  &quot;System Administrator&quot;, $Profile.Name &lt;&gt;  &quot;SPA Portal Admin&quot;),priorvalue(SPA_Resellers_Approved__c) &gt; SPA_Resellers_Approved__c)</errorConditionFormula>
    <errorMessage>Cannot remove resellers once they have been approved. Please send request to SPA admin.</errorMessage>
</ValidationRule>